tests-integration/tests/roundtrip/invalid/semantic_errors/identifier_not_domain/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/identifier_not_domain/identifier_not_domain.essence:2:10:
  |
2 | find x : dom
  |          ^^^
Tried to use a Value where Domain was expected

